--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 
     <div id="auth-screen">
         <div id="tela-login" class="auth-box">
-            <h2>Acesso CT Sol</h2>
-            <input type="email" id="login-email" placeholder="E-mail" required>
+            <div class="auth-header">
+                <h2>SISTEMA CT SOL</h2>
+                <p>Gestão Operacional e Clínica</p>
+            </div>
+            <input type="email" id="login-email" placeholder="E-mail de acesso" required>
             <input type="password" id="login-senha" placeholder="Senha" required>
-            <button class="btn-primary" onclick="fazerLogin()">Entrar</button>
-            <p>Novo profissional? <a href="#" onclick="alternarAuth('cadastro')">Solicitar Cadastro</a></p>
+            <button class="btn-primary" onclick="fazerLogin()">ENTRAR</button>
+            <p class="auth-footer">Deseja cadastrar novo perfil? <a href="#" onclick="alternarAuth('cadastro')">Clique aqui</a></p>
         </div>
 
         <div id="tela-cadastro" class="auth-box" style="display: none;">
-            <h2>Novo Profissional</h2>
+            <h2>SOLICITAR CADASTRO</h2>
             <input type="text" id="cad-nome" placeholder="Nome Completo">
             <select id="cad-cargo">
                 <option value="educador">Educador / Monitor</option>
@@ -26,22 +29,22 @@
                 <option value="social">Assistente Social</option>
                 <option value="admin">Administrador (Diretoria)</option>
             </select>
-            <input type="email" id="cad-email" placeholder="E-mail">
-            <input type="password" id="cad-senha" placeholder="Senha">
-            <button class="btn-primary" onclick="cadastrarProfissional()">Cadastrar</button>
-            <p><a href="#" onclick="alternarAuth('login')">Voltar ao Login</a></p>
+            <input type="email" id="cad-email" placeholder="E-mail profissional">
+            <input type="password" id="cad-senha" placeholder="Criar Senha">
+            <button class="btn-primary" onclick="cadastrarProfissional()">SOLICITAR</button>
+            <p class="auth-footer"><a href="#" onclick="alternarAuth('login')">Voltar ao Login</a></p>
         </div>
     </div>
 
     <div id="app" style="display: none;">
         <aside id="sidebar" class="no-print">
             <div class="side-header">
-                <h3>SISTEMA CT</h3>
-                <span id="user-role-badge"></span>
+                <h3>CT SOL</h3>
+                <span id="user-role-badge">CARGO</span>
             </div>
-            <p id="user-name-display"></p>
+            <div id="user-name-display" class="user-welcome">Nome do Usuário</div>
             <ul id="menu-dinamico"></ul>
-            <button onclick="logout()" class="btn-logout">Sair</button>
+            <button onclick="logout()" class="btn-logout">SAIR DO SISTEMA</button>
         </aside>
 
         <main id="main-content">
@@ -52,87 +55,82 @@
             <div id="dashboard-home" class="view-section">
                 <div class="welcome-card no-print">
                     <h2 id="welcome-text"></h2>
-                    <p>Paz do Senhor. Gestão Operacional e Clínica.</p>
+                    <p>Paz do Senhor. Que seu dia seja produtivo e abençoado na CT Sol.</p>
                 </div>
                 <div id="stats-area" class="stats-grid no-print"></div>
             </div>
 
             <div id="view-acolhidos" class="view-section" style="display:none;">
-                <div class="section-header"><h2>Acolhidos na Casa</h2><button class="btn-add" onclick="abrirModal('modal-acolhido')">+ Novo</button></div>
+                <div class="section-header">
+                    <h2>Gestão de Acolhidos</h2>
+                    <button class="btn-add" onclick="abrirModal('modal-acolhido')">+ NOVO ACOLHIDO</button>
+                </div>
                 <table class="tabela-dados">
-                    <thead><tr><th>Nome</th><th>Idade</th><th>Substância</th><th>Ações</th></tr></thead>
+                    <thead>
+                        <tr><th>Nome do Acolhido</th><th>Idade</th><th>Droga Escolha</th><th>Status</th></tr>
+                    </thead>
                     <tbody id="lista-acolhidos-tabela"></tbody>
                 </table>
             </div>
 
             <div id="view-atividades" class="view-section" style="display:none;">
                 <div class="no-print">
-                    <div style="margin-bottom: 20px; display: flex; gap: 10px;">
-                        <button class="btn-tab" onclick="mostrarSubAtividade('refeicao')">Escala Refeição</button>
-                        <button class="btn-tab" onclick="mostrarSubAtividade('limpeza')">Escala Limpeza</button>
+                    <h2>Escalas e Cronogramas</h2>
+                    <div class="tab-container">
+                        <button class="btn-tab" onclick="mostrarSubAtividade('refeicao')">ESCALA DE REFEIÇÕES</button>
+                        <button class="btn-tab" onclick="mostrarSubAtividade('limpeza')">ESCALA DE LIMPEZA</button>
                     </div>
                 </div>
+
                 <div id="sub-atv-refeicao" style="display:none;">
                     <div class="welcome-card no-print" style="border-left-color: #3498db;">
-                        <div id="form-escala-refeicao"></div>
-                        <button class="btn-action" onclick="gerarTabelaRefeicao()">Gerar Tabela</button>
-                        <button class="btn-print" onclick="imprimirEscala()">Imprimir</button>
+                        <h3>Configurar Refeições Diárias</h3>
+                        <div id="form-escala-refeicao" class="grid-form-escala"></div>
+                        <div class="actions-escala">
+                            <button class="btn-action" onclick="gerarTabelaRefeicao()">VISUALIZAR TABELA</button>
+                            <button class="btn-print" onclick="imprimirEscala()">IMPRIMIR / PDF</button>
+                        </div>
                     </div>
                 </div>
+
                 <div id="sub-atv-limpeza" style="display:none;">
                     <div class="welcome-card no-print" style="border-left-color: #e67e22;">
-                        <div id="form-escala-limpeza"></div>
-                        <button class="btn-action" onclick="gerarTabelaLimpeza()">Gerar Tabela</button>
-                        <button class="btn-print" onclick="imprimirEscala()">Imprimir</button>
+                        <h3>Configurar Limpeza & Faxinão</h3>
+                        <div id="form-escala-limpeza" class="grid-form-escala"></div>
+                        <div class="actions-escala">
+                            <button class="btn-action" onclick="gerarTabelaLimpeza()">VISUALIZAR TABELA</button>
+                            <button class="btn-print" onclick="imprimirEscala()">IMPRIMIR / PDF</button>
+                        </div>
                     </div>
                 </div>
+
                 <div id="area-impressao-escala"></div>
             </div>
 
             <div id="view-social-anamnese" class="view-section" style="display:none;">
-                <h2>Anamnese Social (Entrevista)</h2>
+                <h2>Anamnese Social (Entrevista Inicial)</h2>
                 <div class="welcome-card no-print" style="border-left-color: #9b59b6;">
                     <label>Acolhido:</label>
                     <select id="ana-acolhido-select"></select>
-                    
-                    <div class="form-row" style="display:grid; grid-template-columns: 1fr 1fr; gap:15px; margin-top:15px;">
-                        <div>
-                            <label>Composição Familiar:</label>
-                            <textarea id="ana-familia" placeholder="Com quem mora?"></textarea>
-                        </div>
-                        <div>
-                            <label>Situação Profissional:</label>
-                            <input type="text" id="ana-trabalho" placeholder="Último emprego">
-                        </div>
-                        <div>
-                            <label>Renda Mensal:</label>
-                            <input type="text" id="ana-renda" placeholder="Ex: BPC, Bolsa Família">
-                        </div>
-                        <div>
-                            <label>Pendências Jurídicas:</label>
-                            <input type="text" id="ana-justica" placeholder="Processos ou Condicional">
-                        </div>
+                    <div class="grid-2-col">
+                        <textarea id="ana-familia" placeholder="Dinâmica Familiar..."></textarea>
+                        <textarea id="ana-trabalho" placeholder="Situação Profissional e Renda..."></textarea>
                     </div>
-                    <label>Parecer Social / Observações:</label>
-                    <textarea id="ana-parecer" rows="3" placeholder="Avaliação da Assistente Social..."></textarea>
-                    <button class="btn-action" style="background:#9b59b6" onclick="salvarAnamnese()">Salvar Anamnese</button>
+                    <textarea id="ana-parecer" rows="3" placeholder="Parecer Técnico da Assistente Social..."></textarea>
+                    <button class="btn-action" style="background:#9b59b6" onclick="salvarAnamnese()">SALVAR ANAMNESE</button>
                 </div>
                 <div id="historico-anamnese"></div>
-            </div>
-
-            <div id="view-social-docs" class="view-section" style="display:none;">
-                <h2>Checklist de Documentos</h2>
-                <div class="cards-grid" id="lista-docs-social"></div>
             </div>
 
             <div id="view-diario" class="view-section" style="display:none;"><div class="cards-grid" id="cards-diario-acolhidos"></div></div>
             <div id="view-plantao" class="view-section" style="display:none;"><div id="historico-plantoes"></div></div>
             <div id="view-psi-prontuario" class="view-section" style="display:none;"><div class="cards-grid" id="lista-prontuarios"></div></div>
+            <div id="view-social-docs" class="view-section" style="display:none;"><div class="cards-grid" id="lista-docs-social"></div></div>
         </main>
     </div>
 
-    <div id="modal-acolhido" class="modal"><div class="modal-content"><h3>Novo Acolhido</h3><input id="ac-nome" placeholder="Nome"><input id="ac-idade" type="number"><input id="ac-droga" placeholder="Droga"><button onclick="salvarAcolhido()">Salvar</button><button onclick="fecharModal('modal-acolhido')">Fechar</button></div></div>
-    <div id="modal-evolucao" class="modal"><div class="modal-content"><h3 id="evol-nome-acolhido"></h3><textarea id="evol-texto" rows="5"></textarea><button onclick="salvarEvolucaoClinica()">Gravar</button><button onclick="fecharModal('modal-evolucao')">Fechar</button></div></div>
+    <div id="modal-acolhido" class="modal"><div class="modal-content"><h3>Novo Acolhido</h3><input id="ac-nome" placeholder="Nome"><input id="ac-idade" type="number"><input id="ac-droga" placeholder="Droga"><button onclick="salvarAcolhido()">SALVAR</button><button onclick="fecharModal('modal-acolhido')">FECHAR</button></div></div>
+    <div id="modal-evolucao" class="modal"><div class="modal-content"><h3 id="evol-nome-acolhido"></h3><textarea id="evol-texto" rows="5"></textarea><button onclick="salvarEvolucaoClinica()">GRAVAR</button><button onclick="fecharModal('modal-evolucao')">FECHAR</button></div></div>
 
     <script src="script.js"></script>
 </body>
