--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema CT Sol - Gestão Profissional</title>
+    <title>Sistema CT Sol - Gestão Integrada</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,11 +17,11 @@
             <input type="email" id="login-email" placeholder="E-mail de acesso" required>
             <input type="password" id="login-senha" placeholder="Senha" required>
             <button class="btn-primary" onclick="fazerLogin()">ENTRAR</button>
-            <p class="auth-footer">Deseja cadastrar novo perfil? <a href="#" onclick="alternarAuth('cadastro')">Clique aqui</a></p>
+            <p class="auth-footer">Novo profissional? <a href="#" onclick="alternarAuth('cadastro')">Cadastre-se</a></p>
         </div>
 
         <div id="tela-cadastro" class="auth-box" style="display: none;">
-            <h2>SOLICITAR CADASTRO</h2>
+            <h2>CADASTRO PROFISSIONAL</h2>
             <input type="text" id="cad-nome" placeholder="Nome Completo">
             <select id="cad-cargo">
                 <option value="educador">Educador / Monitor</option>
@@ -29,7 +29,7 @@
                 <option value="social">Assistente Social</option>
                 <option value="admin">Administrador (Diretoria)</option>
             </select>
-            <input type="email" id="cad-email" placeholder="E-mail profissional">
+            <input type="email" id="cad-email" placeholder="E-mail">
             <input type="password" id="cad-senha" placeholder="Criar Senha">
             <button class="btn-primary" onclick="cadastrarProfissional()">SOLICITAR</button>
             <p class="auth-footer"><a href="#" onclick="alternarAuth('login')">Voltar ao Login</a></p>
@@ -42,9 +42,9 @@
                 <h3>CT SOL</h3>
                 <span id="user-role-badge">CARGO</span>
             </div>
-            <div id="user-name-display" class="user-welcome">Nome do Usuário</div>
+            <div id="user-name-display" class="user-welcome">Nome</div>
             <ul id="menu-dinamico"></ul>
-            <button onclick="logout()" class="btn-logout">SAIR DO SISTEMA</button>
+            <button onclick="logout()" class="btn-logout">SAIR</button>
         </aside>
 
         <main id="main-content">
@@ -55,79 +55,79 @@
             <div id="dashboard-home" class="view-section">
                 <div class="welcome-card no-print">
                     <h2 id="welcome-text"></h2>
-                    <p>Paz do Senhor. Que seu dia seja produtivo e abençoado na CT Sol.</p>
+                    <p>Paz do Senhor. Gestão Unificada CT Sol.</p>
                 </div>
                 <div id="stats-area" class="stats-grid no-print"></div>
             </div>
 
             <div id="view-acolhidos" class="view-section" style="display:none;">
-                <div class="section-header">
-                    <h2>Gestão de Acolhidos</h2>
-                    <button class="btn-add" onclick="abrirModal('modal-acolhido')">+ NOVO ACOLHIDO</button>
-                </div>
+                <div class="section-header"><h2>Acolhidos</h2><button class="btn-add" onclick="abrirModal('modal-acolhido')">+ NOVO</button></div>
                 <table class="tabela-dados">
-                    <thead>
-                        <tr><th>Nome do Acolhido</th><th>Idade</th><th>Substância</th><th>Status</th></tr>
-                    </thead>
+                    <thead><tr><th>Nome</th><th>Idade</th><th>Substância</th><th>Status</th></tr></thead>
                     <tbody id="lista-acolhidos-tabela"></tbody>
                 </table>
             </div>
 
             <div id="view-atividades" class="view-section" style="display:none;">
                 <div class="no-print">
-                    <h2>Escalas e Cronogramas</h2>
                     <div class="tab-container">
-                        <button class="btn-tab" onclick="mostrarSubAtividade('refeicao')">ESCALA DE REFEIÇÕES</button>
-                        <button class="btn-tab" onclick="mostrarSubAtividade('limpeza')">ESCALA DE LIMPEZA</button>
+                        <button class="btn-tab" onclick="mostrarSubAtividade('refeicao')">REFEIÇÕES</button>
+                        <button class="btn-tab" onclick="mostrarSubAtividade('limpeza')">LIMPEZA</button>
                     </div>
                 </div>
-
                 <div id="sub-atv-refeicao" style="display:none;">
-                    <div class="welcome-card no-print">
-                        <div id="form-escala-refeicao" class="grid-form-escala"></div>
-                        <div class="actions-escala">
-                            <button class="btn-action" onclick="gerarTabelaRefeicao()">VISUALIZAR TABELA</button>
-                            <button class="btn-print" onclick="imprimirEscala()">IMPRIMIR / PDF</button>
-                        </div>
-                    </div>
+                    <div class="welcome-card no-print"><div id="form-escala-refeicao"></div><button class="btn-action" onclick="gerarTabelaRefeicao()">VISUALIZAR</button><button class="btn-print" onclick="imprimirEscala()">IMPRIMIR</button></div>
                 </div>
-
                 <div id="sub-atv-limpeza" style="display:none;">
-                    <div class="welcome-card no-print">
-                        <div id="form-escala-limpeza" class="grid-form-escala"></div>
-                        <div class="actions-escala">
-                            <button class="btn-action" onclick="gerarTabelaLimpeza()">VISUALIZAR TABELA</button>
-                            <button class="btn-print" onclick="imprimirEscala()">IMPRIMIR / PDF</button>
-                        </div>
-                    </div>
+                    <div class="welcome-card no-print"><div id="form-escala-limpeza"></div><button class="btn-action" onclick="gerarTabelaLimpeza()">VISUALIZAR</button><button class="btn-print" onclick="imprimirEscala()">IMPRIMIR</button></div>
                 </div>
                 <div id="area-impressao-escala"></div>
             </div>
 
-            <div id="view-social-anamnese" class="view-section" style="display:none;">
-                <h2>Anamnese Social (Entrevista Inicial)</h2>
-                <div class="welcome-card no-print">
+            <div id="view-psi-clinico" class="view-section" style="display:none;">
+                <h2>Evolução Clínica Psicológica</h2>
+                <div class="welcome-card no-print" style="border-left-color: #9b59b6;">
                     <label>Acolhido:</label>
-                    <select id="ana-acolhido-select"></select>
+                    <select id="psi-acolhido-select"></select>
                     <div class="grid-2-col">
-                        <textarea id="ana-familia" placeholder="Dinâmica Familiar..."></textarea>
-                        <textarea id="ana-trabalho" placeholder="Situação Profissional e Renda..."></textarea>
+                        <div>
+                            <label>Estado Emocional:</label>
+                            <select id="psi-humor">
+                                <option>Estável</option><option>Ansioso</option><option>Depressivo</option><option>Resistente</option><option>Motivado</option>
+                            </select>
+                        </div>
+                        <div>
+                            <label>Nível de Fissura (Craving):</label>
+                            <select id="psi-fissura">
+                                <option>Baixo</option><option>Moderado</option><option>Alto</option>
+                            </select>
+                        </div>
                     </div>
-                    <textarea id="ana-parecer" rows="3" placeholder="Parecer Técnico da Assistente Social..."></textarea>
-                    <button class="btn-action" style="background:#9b59b6" onclick="salvarAnamnese()">SALVAR ANAMNESE</button>
+                    <label>Relato da Sessão (Sigiloso):</label>
+                    <textarea id="psi-relato" rows="4" placeholder="Registro técnico do atendimento individual..."></textarea>
+                    <button class="btn-action" style="background:#9b59b6" onclick="salvarEvolucaoPsi()">GRAVAR EVOLUÇÃO</button>
+                </div>
+                <div id="historico-psi"></div>
+            </div>
+
+            <div id="view-social-anamnese" class="view-section" style="display:none;">
+                <h2>Anamnese Social</h2>
+                <div class="welcome-card no-print" style="border-left-color: #e67e22;">
+                    <select id="ana-acolhido-select"></select>
+                    <textarea id="ana-familia" placeholder="Dinâmica Familiar..."></textarea>
+                    <textarea id="ana-parecer" rows="3" placeholder="Parecer Técnico Social..."></textarea>
+                    <button class="btn-action" style="background:#e67e22" onclick="salvarAnamnese()">SALVAR</button>
                 </div>
                 <div id="historico-anamnese"></div>
             </div>
 
             <div id="view-diario" class="view-section" style="display:none;"><div class="cards-grid" id="cards-diario-acolhidos"></div></div>
             <div id="view-plantao" class="view-section" style="display:none;"><div id="historico-plantoes"></div></div>
-            <div id="view-psi-prontuario" class="view-section" style="display:none;"><div class="cards-grid" id="lista-prontuarios"></div></div>
             <div id="view-social-docs" class="view-section" style="display:none;"><div class="cards-grid" id="lista-docs-social"></div></div>
         </main>
     </div>
 
     <div id="modal-acolhido" class="modal"><div class="modal-content"><h3>Novo Acolhido</h3><input id="ac-nome" placeholder="Nome"><input id="ac-idade" type="number"><input id="ac-droga" placeholder="Droga"><button onclick="salvarAcolhido()">SALVAR</button><button onclick="fecharModal('modal-acolhido')">FECHAR</button></div></div>
-    <div id="modal-evolucao" class="modal"><div class="modal-content"><h3 id="evol-nome-acolhido"></h3><textarea id="evol-texto" rows="5"></textarea><button onclick="salvarEvolucaoClinica()">GRAVAR</button><button onclick="fecharModal('modal-evolucao')">FECHAR</button></div></div>
 
     <script src="script.js"></script>
 </body>
